fix: remove overflow-y

--- a/client/src/css/scss/base/_global.scss
+++ b/client/src/css/scss/base/_global.scss
@@ -8,6 +8,8 @@ body {
   font-family: Roboto;
   background-color: $bg-color-dark-4;
   color: $font-color-light-1;
+
+  overflow-y: hidden;
 }
 
 code {
